fix: force scrollbar to fix "dancing scrollbar"

--- a/www/shared/styles/global/layout.css
+++ b/www/shared/styles/global/layout.css
@@ -15,9 +15,9 @@
    ========================================================================== */
 
 /*
-   1. Stretch <html> stretch to fill our screen height
-   2. Make children of html (body) occupy at least 100% of the screen
-   3. Viewport is scalable and occupies at least 320px (iPhone SE)
+   1. Stretch <html> stretch to fill our screen height.
+   2. Make children of html (body) occupy at least 100% of the screen.
+   3. Viewport is scalable and occupies at least 320px (iPhone SE).
 */
 
 html {
@@ -32,14 +32,24 @@ html {
    Body & #root
    ========================================================================== */
 
+/*
+   1. Force scroll always to prevent scrollbars to appear/disappear based on the page contents.
+   2. Make sure that we occupy 100% of our parent and allow our child elements to do the same.
+   3. Disable rubber band scrolling.
+*/
+
 body {
-    display: flex;
-    flex: 1 0 auto;
-    flex-direction: column;
+    overflow-y: scroll; /* 1 */
+    display: flex; /* 2 */
+    flex: 1 0 auto; /* 2 */
+    flex-direction: column; /* 2 */
+
+    /* Uncomment to disable rubber band scrolling */
+    /* overscroll-behavior: none; */ /* 3 */
 }
 
 #__next {
-    display: flex;
-    flex: 1 0 auto;
-    flex-direction: column;
+    display: flex; /* 2 */
+    flex: 1 0 auto; /* 2 */
+    flex-direction: column; /* 2 */
 }
